--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,46 @@
-alembic==1.4.0
-azure-common==1.1.24
+alembic==1.8.1
+azure-common==1.1.28
+azure-core==1.26.1
 azure-nspkg==3.0.2
 azure-storage==0.36.0
-certifi==2019.11.28
-cffi==1.14.0
+azure-storage-blob==12.14.1
+cachelib==0.9.0
+certifi==2022.9.24
+cffi==1.15.1
 chardet==3.0.4
-Click==7.0
-cryptography==2.8
-Flask==0.12.5
-Flask-Login==0.5.0
-Flask-Session==0.3.2
-Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.3
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+cryptography==38.0.3
+Flask==2.2.2
+Flask-Login==0.6.2
+Flask-Session==0.4.0
+Flask-SQLAlchemy==3.0.2
+Flask-WTF==1.0.1
+greenlet==2.0.1
 idna==2.8
-itsdangerous==1.1.0
-Jinja2==2.11.1
-Mako==1.1.1
-MarkupSafe==1.1.1
-msal==1.3.0
-pip==10.0.1
-pycparser==2.19
-pyodbc==4.0.28
-pyopenssl==19.1.0
-python-dateutil==2.8.1
+importlib-metadata==5.0.0
+importlib-resources==5.10.0
+isodate==0.6.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.3
+MarkupSafe==2.1.1
+msal==1.20.0
+msrest==0.7.1
+oauthlib==3.2.2
+pycparser==2.21
+PyJWT==2.6.0
+pyodbc==4.0.34
+pyOpenSSL==22.1.0
+python-dateutil==2.8.2
 python-editor==1.0.4
-requests==2.22.0
-setuptools==39.0.1
-six==1.14.0
-SQLAlchemy==1.3.13
-urllib3==1.25.8
-Werkzeug==0.16.1
-WTForms==2.2.1
+requests==2.28.1
+requests-oauthlib==1.3.1
+six==1.16.0
+SQLAlchemy==1.4.43
+typing_extensions==4.4.0
+urllib3==1.26.12
+Werkzeug==2.2.2
+WTForms==3.0.1
+zipp==3.10.0
