--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.8.1
 azure-common==1.1.28
 azure-core==1.26.1
+azure-identity==1.12.0
 azure-nspkg==3.0.2
 azure-storage==0.36.0
 azure-storage-blob==12.14.1
@@ -27,14 +28,17 @@ Jinja2==3.1.2
 Mako==1.2.3
 MarkupSafe==2.1.1
 msal==1.20.0
+msal-extensions==1.0.0
 msrest==0.7.1
 oauthlib==3.2.2
+portalocker==2.6.0
 pycparser==2.21
 PyJWT==2.6.0
 pyodbc==4.0.34
 pyOpenSSL==22.1.0
 python-dateutil==2.8.2
 python-editor==1.0.4
+pywin32==305
 requests==2.28.1
 requests-oauthlib==1.3.1
 six==1.16.0
