--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ PyJWT==2.6.0
 pyodbc==4.0.34
 pyOpenSSL==22.1.0
 python-dateutil==2.8.2
-python-editor==1.0.4
+python-editor>=1.0.4
 pywin32==305
 requests==2.28.1
 requests-oauthlib==1.3.1
